// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert component Should match a skin snapshot 1`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-neutral___CseSn {
  --qtm-colors-neutral-500: hsla(0,0%,60%,.5);
  color: var(--qtm-colors-neutral-500);
}

.Alert-module__content___dWn0E {
  align-items: start;
  display: flex;
}

.Alert-module__icon-neutral___Be4pp {
  color: var(--qtm-colors-neutral-700)!important;
}

.Alert-module__close-button___d9UE7 {
  height: auto;
  margin: 0 0 0 var(--qtm-spacing-medium)!important;
  min-height: 0;
  opacity: 1;
  padding: 0;
  transition: opacity .4s ease;
  width: auto;
}

.Alert-module__wrapper___wtuwZ {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: var(--qtm-base-font-size);
  padding: var(--qtm-spacing-small) var(--qtm-spacing-medium);
}

.Alert-module__wrapper-neutral___dsh9K {
  background-color: var(--qtm-colors-neutral-300);
  border: 1.5px solid var(--qtm-colors-neutral-700);
}

.Alert-module__wrapper-neutral___dsh9K,
.Alert-module__wrapper-primary___G3O8Y {
  color: var(--qtm-colors-neutral-700);
}

<div
  class="Alert-module__wrapper___wtuwZ Alert-module__wrapper-neutral___dsh9K"
  role="alert"
>
  <div
    class="Alert-module__content___dWn0E"
  >
    <span>
      neutral
    </span>
    <button
      class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-neutral___CseSn Alert-module__close-button___d9UE7 Alert-module__icon-neutral___Be4pp"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component Should match a skin snapshot 2`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-neutral___CseSn {
  --qtm-colors-neutral-500: hsla(0,0%,60%,.5);
  color: var(--qtm-colors-neutral-500);
}

.Alert-module__content___dWn0E {
  align-items: start;
  display: flex;
}

.Alert-module__icon-primary___Ca1Xf {
  color: var(--qtm-colors-primary-700)!important;
}

.Alert-module__close-button___d9UE7 {
  height: auto;
  margin: 0 0 0 var(--qtm-spacing-medium)!important;
  min-height: 0;
  opacity: 1;
  padding: 0;
  transition: opacity .4s ease;
  width: auto;
}

.Alert-module__wrapper___wtuwZ {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: var(--qtm-base-font-size);
  padding: var(--qtm-spacing-small) var(--qtm-spacing-medium);
}

.Alert-module__wrapper-neutral___dsh9K,
.Alert-module__wrapper-primary___G3O8Y {
  color: var(--qtm-colors-neutral-700);
}

.Alert-module__wrapper-primary___G3O8Y {
  background-color: var(--qtm-colors-primary-100);
  border: 1.5px solid var(--qtm-colors-primary-700);
}

<div
  class="Alert-module__wrapper___wtuwZ Alert-module__wrapper-primary___G3O8Y"
  role="alert"
>
  <div
    class="Alert-module__content___dWn0E"
  >
    <span>
      blue
    </span>
    <button
      class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-neutral___CseSn Alert-module__close-button___d9UE7 Alert-module__icon-primary___Ca1Xf"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component Should match a skin snapshot 3`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-neutral___CseSn {
  --qtm-colors-neutral-500: hsla(0,0%,60%,.5);
  color: var(--qtm-colors-neutral-500);
}

.Alert-module__content___dWn0E {
  align-items: start;
  display: flex;
}

.Alert-module__icon-success___r8GSH {
  color: var(--qtm-colors-success-900)!important;
}

.Alert-module__close-button___d9UE7 {
  height: auto;
  margin: 0 0 0 var(--qtm-spacing-medium)!important;
  min-height: 0;
  opacity: 1;
  padding: 0;
  transition: opacity .4s ease;
  width: auto;
}

.Alert-module__wrapper___wtuwZ {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: var(--qtm-base-font-size);
  padding: var(--qtm-spacing-small) var(--qtm-spacing-medium);
}

.Alert-module__wrapper-success___Qzpb0 {
  background-color: var(--qtm-colors-success-100);
  border: 1.5px solid var(--qtm-colors-success-900);
  color: var(--qtm-colors-success-900);
}

<div
  class="Alert-module__wrapper___wtuwZ Alert-module__wrapper-success___Qzpb0"
  role="alert"
>
  <div
    class="Alert-module__content___dWn0E"
  >
    <span>
      success
    </span>
    <button
      class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-neutral___CseSn Alert-module__close-button___d9UE7 Alert-module__icon-success___r8GSH"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component Should match a skin snapshot 4`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-neutral___CseSn {
  --qtm-colors-neutral-500: hsla(0,0%,60%,.5);
  color: var(--qtm-colors-neutral-500);
}

.Alert-module__content___dWn0E {
  align-items: start;
  display: flex;
}

.Alert-module__icon-warning___WeAWK {
  color: var(--qtm-colors-warning-700)!important;
}

.Alert-module__close-button___d9UE7 {
  height: auto;
  margin: 0 0 0 var(--qtm-spacing-medium)!important;
  min-height: 0;
  opacity: 1;
  padding: 0;
  transition: opacity .4s ease;
  width: auto;
}

.Alert-module__wrapper___wtuwZ {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: var(--qtm-base-font-size);
  padding: var(--qtm-spacing-small) var(--qtm-spacing-medium);
}

.Alert-module__wrapper-warning___GfyLm {
  background-color: var(--qtm-colors-warning-100);
  border: 1.5px solid var(--qtm-colors-warning-700);
  color: var(--qtm-colors-neutral-700);
}

<div
  class="Alert-module__wrapper___wtuwZ Alert-module__wrapper-warning___GfyLm"
  role="alert"
>
  <div
    class="Alert-module__content___dWn0E"
  >
    <span>
      warning
    </span>
    <button
      class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-neutral___CseSn Alert-module__close-button___d9UE7 Alert-module__icon-warning___WeAWK"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component Should match a skin snapshot 5`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-neutral___CseSn {
  --qtm-colors-neutral-500: hsla(0,0%,60%,.5);
  color: var(--qtm-colors-neutral-500);
}

.Alert-module__content___dWn0E {
  align-items: start;
  display: flex;
}

.Alert-module__icon-neutral___Be4pp {
  color: var(--qtm-colors-neutral-700)!important;
}

.Alert-module__close-button___d9UE7 {
  height: auto;
  margin: 0 0 0 var(--qtm-spacing-medium)!important;
  min-height: 0;
  opacity: 1;
  padding: 0;
  transition: opacity .4s ease;
  width: auto;
}

.Alert-module__wrapper___wtuwZ {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: var(--qtm-base-font-size);
  padding: var(--qtm-spacing-small) var(--qtm-spacing-medium);
}

.Alert-module__wrapper-neutral___dsh9K {
  background-color: var(--qtm-colors-neutral-300);
  border: 1.5px solid var(--qtm-colors-neutral-700);
}

.Alert-module__wrapper-neutral___dsh9K,
.Alert-module__wrapper-primary___G3O8Y {
  color: var(--qtm-colors-neutral-700);
}

<div
  class="Alert-module__wrapper___wtuwZ Alert-module__wrapper-neutral___dsh9K"
  role="alert"
  skins="error"
>
  <div
    class="Alert-module__content___dWn0E"
  >
    <span>
      error
    </span>
    <button
      class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-neutral___CseSn Alert-module__close-button___d9UE7 Alert-module__icon-neutral___Be4pp"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component Should match the snapshot of a simple alert 1`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-neutral___CseSn {
  --qtm-colors-neutral-500: hsla(0,0%,60%,.5);
  color: var(--qtm-colors-neutral-500);
}

.Alert-module__content___dWn0E {
  align-items: start;
  display: flex;
}

.Alert-module__icon-neutral___Be4pp {
  color: var(--qtm-colors-neutral-700)!important;
}

.Alert-module__close-button___d9UE7 {
  height: auto;
  margin: 0 0 0 var(--qtm-spacing-medium)!important;
  min-height: 0;
  opacity: 1;
  padding: 0;
  transition: opacity .4s ease;
  width: auto;
}

.Alert-module__wrapper___wtuwZ {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: var(--qtm-base-font-size);
  padding: var(--qtm-spacing-small) var(--qtm-spacing-medium);
}

.Alert-module__wrapper-neutral___dsh9K {
  background-color: var(--qtm-colors-neutral-300);
  border: 1.5px solid var(--qtm-colors-neutral-700);
}

.Alert-module__wrapper-neutral___dsh9K,
.Alert-module__wrapper-primary___G3O8Y {
  color: var(--qtm-colors-neutral-700);
}

<div
  class="Alert-module__wrapper___wtuwZ Alert-module__wrapper-neutral___dsh9K"
  role="alert"
>
  <div
    class="Alert-module__content___dWn0E"
  >
    <span>
      Sample alert
    </span>
    <button
      class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-neutral___CseSn Alert-module__close-button___d9UE7 Alert-module__icon-neutral___Be4pp"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component Should match the snapshot with an icon 1`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-neutral___CseSn {
  --qtm-colors-neutral-500: hsla(0,0%,60%,.5);
  color: var(--qtm-colors-neutral-500);
}

.Alert-module__content___dWn0E {
  align-items: start;
  display: flex;
}

.Alert-module__alert-icon___Lk96n {
  margin-right: var(--qtm-spacing-medium);
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Alert-module__icon-neutral___Be4pp {
  color: var(--qtm-colors-neutral-700)!important;
}

.Alert-module__close-button___d9UE7 {
  height: auto;
  margin: 0 0 0 var(--qtm-spacing-medium)!important;
  min-height: 0;
  opacity: 1;
  padding: 0;
  transition: opacity .4s ease;
  width: auto;
}

.Alert-module__wrapper___wtuwZ {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: var(--qtm-base-font-size);
  padding: var(--qtm-spacing-small) var(--qtm-spacing-medium);
}

.Alert-module__wrapper-neutral___dsh9K {
  background-color: var(--qtm-colors-neutral-300);
  border: 1.5px solid var(--qtm-colors-neutral-700);
}

.Alert-module__wrapper-neutral___dsh9K,
.Alert-module__wrapper-primary___G3O8Y {
  color: var(--qtm-colors-neutral-700);
}

<div
  class="Alert-module__wrapper___wtuwZ Alert-module__wrapper-neutral___dsh9K"
  role="alert"
>
  <div
    class="Alert-module__content___dWn0E"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Alert-module__alert-icon___Lk96n Alert-module__icon-neutral___Be4pp css-i4bv87-MuiSvgIcon-root"
      data-qtm-preloader="icon"
      data-testid="InfoIcon"
      focusable="false"
      style="font-size: 24px; max-width: 24px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
      />
    </svg>
    <span>
      Sample alert
    </span>
    <button
      class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-neutral___CseSn Alert-module__close-button___d9UE7 Alert-module__icon-neutral___Be4pp"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;
